# task-rs

./: .env.sample  .gitignore  README.md  docker-compose.yml
auth0/: add-or-assign-roles.js
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20240921112437_Initial.sql
backend/src/: auth.rs  consts.rs  error.rs  main.rs  page.rs  repo.rs
backend/src/task/: handlers.rs  mod.rs  repo.rs  requests.rs
backend/src/task_list/: handlers.rs  mod.rs  repo.rs  requests.rs
backend/src/user/: handlers.rs  mod.rs  repo.rs  requests.rs
frontend/: README.md  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: Login.vue  Logout.vue  Navbar.vue  TaskList.vue
frontend/src/stores/: auth.js  token.js
frontend/src/views/: Home.vue  Login.vue  Logout.vue
