[package]
name = "task"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-web-httpauth = "0.8"
alcoholic_jwt = "4091.0"
cached = "0.54"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["chrono", "postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
thiserror = "2.0"
uuid = { version = "1.11", features = ["fast-rng", "macro-diagnostics", "serde", "v7"] }
validator = { version = "0.19", features = ["derive"] }
